--- a/style.css
+++ b/style.css
@@ -133,3 +133,13 @@ html, body{
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+#page3-upper{
+    height: 30%;
+    width: 35%;
+    background-color: green;
+    z-index: 9;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+}
