--- a/style.css
+++ b/style.css
@@ -136,10 +136,145 @@ html, body{
 
 #page3-upper{
     height: 30%;
-    width: 35%;
-    background-color: blue;
+    width: 40%;
     z-index: 9;
     left: 50%;
+    top: 5%;
     position: absolute;
     transform: translateX(-50%);
+}
+
+#page3-upper>img{
+    width: 70%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    
+    position: absolute;
+}
+
+#page3-upper-inner{
+    position: absolute;
+    bottom: 0%;
+
+    height: 50%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 80px;
+    color: #ff823d;
+}
+
+#page3-upper-inner>h3{
+    font-weight: 500;
+    
+    
+}
+
+
+#page3>button{
+    position: absolute;
+    bottom: 7%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px 30px;
+    border: 1px solid #000;
+    font-weight: 500;
+    background-color: #fff;
+    border-radius: 50px;
+    font-size: 1.4vw;
+}
+
+
+#page4{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+#page4>video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+#center-page4{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+    font-size: 2vw;
+}
+#page5{
+    display: flex;
+    position: relative;
+    height: 60vh;
+    width: 100vw;
+}
+.left5{
+    position: relative;
+    margin-top: 1%;
+    height: 100%;
+    width: 50%;
+}
+.left5>h1{
+    font-size: 2.3vw;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 10%;
+}
+.right5{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 50%;
+    padding-left: 5vw;
+    
+}
+.right5>h3{
+    font-size: 1.7vw;
+    width: 90%;
+    color: #484848d7;
+}
+.right5>button{
+    padding: 10px 20px;
+    border: none;
+    background-color: #ff823d;
+    color: #fff;
+    font-weight: 400;
+    border-radius: 50px;
+    font-size: 1.3vw;
+    margin-top: 1.5vw;
+}
+
+#page6{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    height: 75vh;
+    width: 100vw;
+    background-color: #f5f5f7;
+    
+
+}
+#page6>h3{
+    margin-bottom: 1vw;
+    font-size: 2vw;
+}
+#page6>h1{
+    margin-bottom: 1.5vw;
+    font-size: 4vw;
+}
+#page6>p{
+    font-size: 1.2vw;
+    width: 60%;
+    font-weight: 700;
+    color: #545454c9;
 }
